# BetterFasterWhisper

./: .gitignore  LICENSE  Package.swift  README.md
App/BetterFasterWhisper/: BetterFasterWhisper.entitlements  Info.plist
App/BetterFasterWhisper/Assets.xcassets/AccentColor.colorset/: Contents.json
App/BetterFasterWhisper/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
App/BetterFasterWhisper/Sources/App/: AppDelegate.swift  BetterFasterWhisperApp.swift
App/BetterFasterWhisper/Sources/Core/Audio/: AudioRecorder.swift
App/BetterFasterWhisper/Sources/Core/Models/: AppState.swift  TranscriptionMode.swift  TranscriptionResult.swift
App/BetterFasterWhisper/Sources/Core/Services/: ClipboardManager.swift  HotkeyManager.swift  MediaControlManager.swift  ModelManager.swift  WhisperService.swift
App/BetterFasterWhisper/Sources/UI/Screens/: MenuBarView.swift  RecordingView.swift  SettingsView.swift
Assets/: AppIcon.icns
BetterFasterWhisper.xcodeproj/: project.pbxproj
Scripts/: build.sh
whisper-core/: Cargo.toml  build.rs  cbindgen.toml
whisper-core/include/: whisper_core.h
whisper-core/src/: audio.rs  config.rs  error.rs  ffi.rs  lib.rs  transcription.rs
