[package]
name = "whisper-core"
version = "0.1.0"
edition = "2021"
authors = ["BetterFasterWhisper Contributors"]
description = "High-performance Whisper transcription engine with Swift FFI bindings"
license = "MIT"
repository = "https://github.com/yourusername/BetterFasterWhisper"

[lib]
name = "whisper_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Whisper bindings
whisper-rs = "0.13"

# Audio processing
cpal = "0.15"
hound = "3.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# FFI utilities
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
